Implemented AJAX event (add to favorites) and shortcode

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 /wp-admin/
 /wp-content/index.php
 /wp-content/plugins/wp-dummy-content-generator
+/wp-content/plugins/contact-form-7
 /wp-content/languages
 /wp-content/plugins/index.php
 /wp-content/themes/index.php
